Fix a bunch o stuff

--- a/docs/_posts/2020-12-05-aoc-2020-day-5.md
+++ b/docs/_posts/2020-12-05-aoc-2020-day-5.md
@@ -7,53 +7,41 @@ comments: true
 categories: [code, Uncategorized]
 ---
 
-<p>This one was fun! Using python for this felt like cheating, honestly. Doing the challenge right after breakfast made everything seem easier too.</p>
+This one was fun! Using python for this felt like cheating, honestly. Doing the challenge right after breakfast made everything seem easier too.
+
+
+{% include image.html
+            img="https://natedileas.files.wordpress.com/2020/12/day5_pithy_screenshot-1.png"
+            title="This never happens in real life, because I hold onto my boarding pass and ID in my sweaty little hands for the entire time I'm in the airport."
+            caption="This never happens in real life, because I hold onto my boarding pass and ID in my sweaty little hands for the entire time I'm in the airport." %}
+
+{% include image.html
+            img="https://natedileas.files.wordpress.com/2020/12/timer_screenshot_day5-1.png"
+            title="Best Time Yet!"
+            caption="Best Time Yet!" %}
+
+
+Anecdotally, I spent almost 6 minutes reading the problem statement before writing any code. If I had gotten the critical mapping sooner, I could have cut my time in half easily. I wonder if using some sort of screen recording + reviewing time spent later might help me improve my times, like suggested by [that one Dan Luu post](https://danluu.com/p95-skill/). In a sense, every one of these puzzles is based on recognizing a standard problem / structure, and adjusting for the problem-specific peculiarities.
 
 
 
-<div class="wp-block-columns">
-<div class="wp-block-column" style="flex-basis:75%;">
-<figure class="wp-block-image size-large"><img src="https://natedileas.files.wordpress.com/2020/12/day5_pithy_screenshot-1.png?w=859" alt="Screenshot of the puzzle text. It reads: &quot;You board your plane only to discover a new problem: you dropped your boarding pass! You aren't sure which seat is yours, and all of the flight attendants are busy with the flood of people that suddenly made it through passport control.
-
-You write a quick program to use your phone's camera to scan all of the nearby boarding passes (your puzzle input); perhaps you can find your seat through process of elimination.
-
-Instead of zones or groups, this airline uses binary space partitioning to seat people. A seat might be specified like FBFBBFFRLR, where F means &quot;front&quot;, B means &quot;back&quot;, L means &quot;left&quot;, and R means &quot;right&quot;.
-
-The first 7 characters will either be F or B; these specify exactly one of the 128 rows on the plane (numbered 0 through 127). Each letter tells you which half of a region the given seat is in. Start with the whole list of rows; the first letter indicates whether the seat is in the front (0 through 63) or the back (64 through 127). The next letter indicates which half of that region the seat is in, and so on until you're left with exactly one row.&quot;" class="wp-image-118" /><figcaption>This never happens in real life, because I hold onto my boarding pass and ID in my sweaty little hands for the entire time I'm in the airport.</figcaption></figure>
+The critical insight for part 1 was that this: `FBFBFBF == 0101010`; exactly how an integer is stored in a most-significant-bit encoding. Python's tools for working with strings and binary conversion made this a breeze. Part 2 was straightforward data munging; find the missing id in a sorted list. I did part 2 in the shell with numpy in about a minute.
 
 
 
+    def boarding_pass_row(seq):
+        assert len(seq) == 7
+        seqb = seq.replace('F', '0').replace('B', '1')
+        return int(seqb, 2)
+    
+    def boarding_pass_col(seq):
+        assert len(seq) == 3
+        seqb = seq.replace('R', '1').replace('L', '0')
+        return int(seqb, 2)
+    
+    def row_id(seq):
+        row, col = boarding_pass_row(seq[:7]), boarding_pass_col(seq[7:])
+        return 8 * row + col
 
-<div class="wp-block-column">
-<figure class="wp-block-image size-large is-resized"><img src="https://natedileas.files.wordpress.com/2020/12/timer_screenshot_day5-1.png?w=402" alt="Timer screenshot showing 10:18 split into two laps of 8:26 and 1:51 for parts 1 and 2, respectively. " class="wp-image-119" width="164" height="256" /><figcaption>Best Time Yet!</figcaption></figure>
-
-
-
-
-
-<p>Anecdotally, I spent almost 6 minutes reading the problem statement before writing any code. If I had gotten the critical mapping sooner, I could have cut my time in half easily. I wonder if using some sort of screen recording + reviewing time spent later might help me improve my times, like suggested by <a href="https://danluu.com/p95-skill/">that one Dan Luu post</a>. In a sense, every one of these puzzles is based on recognizing a standard problem / structure, and adjusting for the problem-specific peculiarities.</p>
-
-
-
-<p>The critical insight for part 1 was that this: <code>FBFBFBF == 0101010</code>; exactly how an integer is stored in a most-significant-bit encoding. Python's tools for working with strings and binary conversion made this a breeze. Part 2 was straightforward data munging; find the missing id in a sorted list. I did part 2 in the shell with numpy in about a minute.</p>
-
-
-
-<pre class="wp-block-syntaxhighlighter-code">def boarding_pass_row(seq):
-    assert len(seq) == 7
-    seqb = seq.replace('F', '0').replace('B', '1')
-    return int(seqb, 2)
-
-def boarding_pass_col(seq):
-    assert len(seq) == 3
-    seqb = seq.replace('R', '1').replace('L', '0')
-    return int(seqb, 2)
-
-def row_id(seq):
-    row, col = boarding_pass_row(seq[:7]), boarding_pass_col(seq[7:])
-    return 8 * row + col</pre>
-
-
-
-<p>For the full code, like and subscribe to <a href="https://github.com/natedileas/advent-of-code/blob/main/2020/day5.py">my github.</a> This episode sponsored by nothing and no one; "Feel the call of the void!"<strong>™</strong>.</p>
+For the full code, like and subscribe to [my github.](https://github.com/natedileas/advent-of-code/blob/main/2020/day5.py) This episode sponsored by nothing and no one; "Feel the call of the void!"™.
 
