--- a/docs/_posts/2020-12-09-aoc-2020-day-8.md
+++ b/docs/_posts/2020-12-09-aoc-2020-day-8.md
@@ -7,34 +7,20 @@ comments: true
 categories: [code, Uncategorized]
 ---
 
-<p>My brain was fuzzy and slow during this challenge; I probably could have achieved a much better time at peak coffee time. I also hereby predict that I will reuse the code from today in several challenges hence.</p>
+My brain was fuzzy and slow during this challenge; I probably could have achieved a much better time at peak coffee time. I also hereby predict that I will reuse the code from today in several challenges hence.
+
+{% include image.html
+            img="https://natedileas.files.wordpress.com/2020/12/day8_pithy_screenshot.png?w=871"
+            title="Man do I want a drink with a little umbrella."
+            caption="Man do I want a drink with a little umbrella." %}
+{% include image.html
+            img="https://natedileas.files.wordpress.com/2020/12/timer_screenshot_day8.png"
+            title="Screenshot of a timer with two laps, 9:39 and 7:04, and a total time of 16:41."
+            caption="Screenshot of a timer with two laps, 9:39 and 7:04, and a total time of 16:41." %}
 
 
-
-<div class="wp-block-columns">
-<div class="wp-block-column" style="flex-basis:66.66%;">
-<figure class="wp-block-image size-large"><img src="https://natedileas.files.wordpress.com/2020/12/day8_pithy_screenshot.png?w=871" alt="Screenshot of the puzzle text. It reads: &quot;--- Day 8: Handheld Halting ---
-Your flight to the major airline hub reaches cruising altitude without incident. While you consider checking the in-flight menu for one of those drinks that come with a little umbrella, you are interrupted by the kid sitting next to you.
-
-Their handheld game console won't turn on! They ask if you can take a look.
-
-You narrow the problem down to a strange infinite loop in the boot code (your puzzle input) of the device. You should be able to fix it, but first you need to be able to run the code in isolation.
-
-The boot code is represented as a text file with one instruction per line of text. Each instruction consists of an operation (acc, jmp, or nop) and an argument (a signed number like +4 or -20).&quot;" class="wp-image-146" /><figcaption>Man do I want a drink with a little umbrella.</figcaption></figure>
+Today's challenge was a to implement a simple-purpose computer, which has instructions which can do nothing, move the pointer, or adjust the value of a single variable! Incredible new technology from sun microsystems. Part 1 was to detect infinite loops and complain about it. Part 2 was to fix them, by changing a single instruction (and then not complain about it). It was fun! Reminds me a lot of the intcode computer from last year. 
 
 
-
-
-<div class="wp-block-column" style="flex-basis:33.33%;">
-<figure class="wp-block-image size-large"><img src="https://natedileas.files.wordpress.com/2020/12/timer_screenshot_day8.png?w=402" alt="Screenshot of a timer with two laps, 9:39 and 7:04, and a total time of 16:41." class="wp-image-147" /></figure>
-
-
-
-
-
-<p>Today's challenge was a to implement a simple-purpose computer, which has instructions which can do nothing, move the pointer, or adjust the value of a single variable! Incredible new technology from sun microsystems. Part 1 was to detect infinite loops and complain about it. Part 2 was to fix them, by changing a single instruction (and then not complain about it). It was fun! Reminds me a lot of the intcode computer from last year. </p>
-
-
-
-<p>The code was pretty prosaic, and I'm tired, so no exegesis tonight. Gonna go see if I have any little umbrellas anywhere. <a href="https://github.com/natedileas/advent-of-code/blob/main/2020/day8.py">Here's the code, if you like that sort of thing.</a></p>
+The code was pretty prosaic, and I'm tired, so no exegesis tonight. Gonna go see if I have any little umbrellas anywhere. [Here's the code, if you like that sort of thing.](https://github.com/natedileas/advent-of-code/blob/main/2020/day8.py)
 
