--- a/docs/_posts/2020-12-15-aoc-2020-days-13-and-14.md
+++ b/docs/_posts/2020-12-15-aoc-2020-days-13-and-14.md
@@ -7,13 +7,24 @@ comments: true
 categories: [Uncategorized]
 ---
 
-<p>Blargh. I haven't finished part 2 of day 13 yet, but day 14 was fun. It was a bit hacking exercise, which is always a fun way to exercise my brain. I cheated a little bit by using stackoverflow, but just to remind myself of the right way to set and clear a bit. I wouldn't be surprised if this turned out to be reused later; it had that sort of feel to it.</p>
+Blargh. I haven't finished part 2 of day 13 yet, but day 14 was fun. It was a bit hacking exercise, which is always a fun way to exercise my brain. I cheated a little bit by using stackoverflow, but just to remind myself of the right way to set and clear a bit. I wouldn't be surprised if this turned out to be reused later; it had that sort of feel to it.
 
 
 
-<figure class="wp-block-jetpack-image-compare"><div class="juxtapose" data-mode="horizontal"><img id="182" src="https://natedileas.files.wordpress.com/2020/12/screen_before.png" alt="" width="760" height="650" class="image-compare__image-before" /><img id="183" src="https://natedileas.files.wordpress.com/2020/12/screen_after.png" alt="" width="760" height="650" class="image-compare__image-after" /></div><figcaption>I don't have anything pithy to add today, so here's a nice visualization of the ascii art on the puzzle page. The ordering of the puzzles is really bothering me.</figcaption></figure>
+{% include image.html
+            img="https://natedileas.files.wordpress.com/2020/12/screen_before.png"
+            title=""
+            caption="" %}
+{% include image.html
+            img="https://natedileas.files.wordpress.com/2020/12/screen_after.png"
+            title=""
+            caption="" %}
+
+I don't have anything pithy to add today, so here's a nice visualization of the ascii art on the puzzle page. The ordering of the puzzles is really bothering me.
 
 
-
-<figure class="wp-block-image size-large"><img src="https://natedileas.files.wordpress.com/2020/12/newplot-1.png?w=1024" alt="" class="wp-image-179" /><figcaption>My times are definitely getting worse, especially considering the part 2 failures. But the challenges are getting slightly longer, and I'm getting very ready for a real vacation.</figcaption></figure>
+{% include image.html
+            img="https://natedileas.files.wordpress.com/2020/12/newplot-1.png?w=1024"
+            title="My times are definitely getting worse, especially considering the part 2 failures. But the challenges are getting slightly longer, and I'm getting very ready for a real vacation."
+            caption="My times are definitely getting worse, especially considering the part 2 failures. But the challenges are getting slightly longer, and I'm getting very ready for a real vacation." %}
 
