--- a/docs/_posts/2020-12-08-aoc-2020-day-7.md
+++ b/docs/_posts/2020-12-08-aoc-2020-day-7.md
@@ -7,29 +7,22 @@ comments: true
 categories: [code, Uncategorized]
 ---
 
-<p><a href="https://adventofcode.com/2020/day/7">Graph theory to the rescue</a>! I've been reviewing some of the puzzles that I didn't finish last year, and one of them dovetailed perfectly with this challenge, allowing me to complete it in a very reasonable amount of time (for me, at least). I think from these pair of challenges, I've learned a lot about practical graph stuff.</p>
+[Graph theory to the rescue](https://adventofcode.com/2020/day/7)! I've been reviewing some of the puzzles that I didn't finish last year, and one of them dovetailed perfectly with this challenge, allowing me to complete it in a very reasonable amount of time (for me, at least). I think from these pair of challenges, I've learned a lot about practical graph stuff.
+
+{% include image.html
+            img="https://natedileas.files.wordpress.com/2020/12/day7_pithy_screenshot.png"
+            title="Even in my dreams, I can't win."
+            caption="Even in my dreams, I can't win." %}
+
+
+It took a long time to get the graph parsed.
+
+{% include image.html
+            img="https://natedileas.files.wordpress.com/2020/12/timer_screenshot_day7.png"
+            title=""
+            caption="" %}
 
 
 
-<div class="wp-block-columns">
-<div class="wp-block-column" style="flex-basis:90%;">
-<figure class="wp-block-image size-large"><img src="https://natedileas.files.wordpress.com/2020/12/day7_pithy_screenshot.png?w=888" alt="Screenshot of the puzzle text. It reads &quot;You land at the regional airport in time for your next flight. In fact, it looks like you'll even have time to grab some food: all flights are currently delayed due to issues in luggage processing.
-
-Due to recent aviation regulations, many rules (your puzzle input) are being enforced about bags and their contents; bags must be color-coded and must contain specific quantities of other color-coded bags. Apparently, nobody responsible for these regulations considered how long they would take to enforce!&quot;" class="wp-image-140" /><figcaption>Even in my dreams, I can't win.</figcaption></figure>
-
-
-
-<p>It took a long time to get the graph parsed.</p>
-
-
-
-
-<div class="wp-block-column" style="flex-basis:33.33%;">
-<figure class="wp-block-image size-large"><img src="https://natedileas.files.wordpress.com/2020/12/timer_screenshot_day7.png?w=402" alt="Screenshot of a timer showing two laps, 24:28 and 10:18, and a total time of 34:48." class="wp-image-138" /></figure>
-
-
-
-
-
-<p>Both the challenges boiled down to graph processing. Starting with a set of nodes / edges, I had to load them into a graph, then walk the graph and measure things for different challenges. Here's the <a href="https://github.com/natedileas/advent-of-code/blob/main/2020/day7.py">code</a>! I'll probably go back later and touch it up, renaming things and gleaning critical insights that every other coder learned in CS 203 ("Algorithms, Data Structures, and Deodorant; Optional?"). All joking aside, most CS students I knew were well groomed but slightly less well adjusted.</p>
+Both the challenges boiled down to graph processing. Starting with a set of nodes / edges, I had to load them into a graph, then walk the graph and measure things for different challenges. Here's the [code](https://github.com/natedileas/advent-of-code/blob/main/2020/day7.py)! I'll probably go back later and touch it up, renaming things and gleaning critical insights that every other coder learned in CS 203 ("Algorithms, Data Structures, and Deodorant; Optional?"). All joking aside, most CS students I knew were well groomed but slightly less well adjusted.
 
