Add side and margin notes

--- a/docs/_posts/2021-12-02-aoc-2021-start.md
+++ b/docs/_posts/2021-12-02-aoc-2021-start.md
@@ -7,7 +7,11 @@ comments: true
 categories: [Uncategorized]
 ---
 
-It's a truth universally acknowledged that I hate a finished product, as long as I'm the one doing the finishing. Last year, I stopped writing these blog posts when I got bored. This year, I promise to either finish the month or get bored much more quickly, 50-50. I did eventually finish 2020's problems with much tearing my clothes, rubbing ashes in my hair, and putting on of sackcloth. As a total aside; I think the fragmentation of literary culture away from the bible has robbed the US population of a useful schelling point, or common reference, for a rich source of metaphor (see moby dick). As always, the jewish community has a good strategy by making every smart person study the same set of books for thousands of years.
+It's a truth universally acknowledged that I hate a finished product, as long as I'm the one doing the finishing. Last year, I stopped writing these blog posts when I got bored. This year, I promise to either finish the month or get bored much more quickly, 50-50. I did eventually finish 2020's problems with much tearing my clothes, rubbing ashes in my hair, and putting on of sackcloth. {% include sidenote.html
+            id="bible"
+            text="As a total aside; I think the fragmentation of literary culture away from the bible has robbed the US population of a useful schelling point, or common reference, for a rich source of metaphor (see moby dick). As always, the jewish community has a good strategy by making every smart person study the same set of books for thousands of years." %}
+
+
 
 Onward and downward!
 
@@ -20,6 +24,10 @@ Onward and downward!
 <p>Your instincts tell you that in order to save Christmas, you'll need to get all <em class="star">fifty stars</em> by December 25th.</p>
 
 </div>
+
+{% include marginnote.html 
+	id="sport"
+	text="I'm firmly convinced the elves are hunting me for sport in increasingly convoluted ways." %}
 
 ## Overall Approach
 
@@ -40,17 +48,18 @@ In terms of tools, I'm sticking with python (poetry,pyenv as package+version man
 
 For lack of a better category, I'm calling this signal processing. It also follows the "map + reduce lines" pattern, or whatever. This problem was easy (\~3 minutes), and I didn't bother to make it reusable; I can't see it coming up again.
 	
-	INPUT = open('input1.txt').read()
+```python
+INPUT = open('input1.txt').read()
 
-	if __name__ == '__main__':
-    	values = [int(i) for i in INPUT.splitlines() if i]
-		
-    	print('part 1: ', sum(values[i+1] > values[i]
-                          	for i in range(len(values)-1)))
+if __name__ == '__main__':
+	values = [int(i) for i in INPUT.splitlines() if i]
 	
-    	print('part 2: ', sum(sum(values[i+1:i+4]) > sum(values[i:i+3])
-                          	for i in range(len(values)-3)))
+	print('part 1: ', sum(values[i+1] > values[i] f
+		or i in range(len(values)-1)))
 
+	print('part 2: ', sum(sum(values[i+1:i+4]) > sum(values[i:i+3]) 
+		for i in range(len(values)-3)))
+```
 
 ## Day 2
 
@@ -62,59 +71,63 @@ For lack of a better category, I'm calling this signal processing. It also follo
 	<p>Based on your calculations, the planned course doesn't seem to make any sense. You find the submarine manual and discover that the process is actually slightly more complicated.</p>
 </div>
 
+{% include marginnote.html 
+	id="sense"
+	text="Based on my calculations, I've been trapped in some sort of puzzle world hell, ruled by a sort of red madman with lots of child labor."
+	 %}
+
 Also pretty easy (5:54 but I was sick). I'm categorizing this one as "instruction per line" and "manhattan distance" or "grid movement". I kind of want to make some visualizations of the movement here. When I'm pressed for time, I tend to name things generically, even when there's consistent terminology in the question. Something to fix in the future. This type of problem struck me as a way to experiment with the structural pattern matching that's new in python 3.10; something to try.
 
-
-	INPUT = """
-	forward 5
-	down 5
-	forward 8
-	up 3
-	down 8
-	forward 2"""
-	INPUT = open('input.txt').read()
-
-
-	def plot_pos(input):
-	    x = 0
-	    y = 0
-
-	    for line in input.splitlines():
-	        if not line:
-	            continue
-
-	        if line.startswith('forward'):
-	            x += int(line.replace('forward ', ''))
-	        elif line.startswith('down'):
-	            y -= int(line.replace('down ', ''))
-	        elif line.startswith('up'):
-	            y += int(line.replace('up ', ''))
-
-	    return x, y
+```python
+INPUT = """
+forward 5
+down 5
+forward 8
+up 3
+down 8
+forward 2"""
+INPUT = open('input.txt').read()
 
 
-	def plot_posv2(input):
-	    x = 0
-	    y = 0
-	    aim = 0
+def plot_pos(input):
+    x = 0
+    y = 0
 
-	    for line in input.splitlines():
-	        if not line:
-	            continue
+    for line in input.splitlines():
+        if not line:
+            continue
 
-	        if line.startswith('forward'):
-	            w = int(line.replace('forward ', ''))
-	            x += w
-	            y += aim * w
-	        elif line.startswith('down'):
-	            aim += int(line.replace('down ', ''))
-	        elif line.startswith('up'):
-	            aim -= int(line.replace('up ', ''))
+        if line.startswith('forward'):
+            x += int(line.replace('forward ', ''))
+        elif line.startswith('down'):
+            y -= int(line.replace('down ', ''))
+        elif line.startswith('up'):
+            y += int(line.replace('up ', ''))
 
-	    return x, y
+    return x, y
 
+
+def plot_posv2(input):
+    x = 0
+    y = 0
+    aim = 0
+
+    for line in input.splitlines():
+        if not line:
+            continue
+
+        if line.startswith('forward'):
+            w = int(line.replace('forward ', ''))
+            x += w
+            y += aim * w
+        elif line.startswith('down'):
+            aim += int(line.replace('down ', ''))
+        elif line.startswith('up'):
+            aim -= int(line.replace('up ', ''))
+
+    return x, y
 
 	if __name__ == '__main__':
 	    print('part 1: ', plot_pos(INPUT))
 	    print('part 2: ', plot_posv2(INPUT))
-`
+```
